# Transcription-code

./: README.md  deps.yaml
competition/scoring/reward_model/: reward_model.typ
data/midi/: mt3_transcribed_2track.mid  target_music_2track.mid
midi_similarity_score/: README.md
midi_similarity_score/sliding_window_py/: midi.ipynb
midi_similarity_score/sliding_window_rs/: Cargo.toml  plot.py
midi_similarity_score/sliding_window_rs/src/: lib.rs  main.rs  util.rs
ml/: README.md  mamba.ipynb
